<resources>
    <string name="app_name">MA Project</string>

    <!-- Login -->
    <string name="app_logo_desc">App Logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_subtitle">Login into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>

    <!-- Register -->
    <string name="registration">Register</string>
    <string name="username">Username</string>
    <string name="select_avatar">Choose your avatar!</string>
    <string name="register">Register</string>
    <string name="already_have_account">I already have account</string>
    <string name="avatar_desc">Avatar %1$d</string>

    <!-- Main -->
    <string name="welcome">Welcome!</string>
    <string name="main_screen_subtitle">Main app window</string>
    <string name="logout">Logout</string>

    <!-- Task detail labels -->
    <string name="label_category">Category: %1$s</string>
    <string name="label_execution">Execution: %1$s</string>
    <string name="label_difficulty">Difficulty: %1$s</string>
    <string name="label_importance">Importance: %1$s</string>
    <string name="label_description">Description: %1$s</string>
    <string name="label_status">Status: %1$s</string>

    <string name="status_not_done">Status: NOT_DONE</string>
    <string name="pause">Pause</string>
    <string name="reactivate">Reactivate</string>
</resources>